--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@ title: Home
         </div>
     </div>
     <div class="column has-text-justified">
-      <p>Hi, I'm Mild or Thada Wangthammang. I live at Hatyai, Songkhla, Thailand. </p>
+      <p>Hi, I'm Mild or Thada Wangthammang. I live in Hatyai, Songkhla, Thailand. </p>
       <p>I'm currently lecturer at <a href="https://www.uic.psu.ac.th/" target="blank">Prince of Songkla University International College (PSUIC), Digital Media Program.</a> I received M.Eng and B.Eng. in 2018 and 2015 from Department of Computer Engineering, Prince of
       Songkla University (PSU). 
       I'm enthusiastic to learn about and conduct some research
