enable lazy load image on index page, compress all images

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@ title: Home
 
 <style>
     .image{
-        margin-top:0.2rem;
-        margin-bottom:0.2rem;
+        margin-top:0.7rem;
+        margin-bottom:0.7rem;
     }
     </style>
     
@@ -82,32 +82,32 @@ title: Home
 
 <div class="columns">
   <div class="column img-column" style="padding: 0.4rem;">
-    <img alt="my photo" class="image" src="{{site.url}}/public/images/about/1.jpg">
+    <!-- <img alt="my photo" class="image" src="{{site.url}}/public/images/about/1.jpg">
     <img alt="my photo" class="image" src="{{site.url}}/public/images/about/2.jpg">
     <img alt="my photo" class="image" src="{{site.url}}/public/images/about/3.jpg">
     <img alt="my photo" class="image" src="{{site.url}}/public/images/about/4.jpg">
-    <img alt="my photo" class="image" src="{{site.url}}/public/images/about/5.jpg">
-<!--    {% for i in (1..5) %}
-      <div class="image placeholder" data-large="{{site.url}}/public/images/about/{{i}}.jpg">
+    <img alt="my photo" class="image" src="{{site.url}}/public/images/about/5.jpg"> -->
+   {% for i in (1..5) %}
+      <div class="image placeholder" data-large="https://ce8be7dec.cloudimg.io/cdno/n/q90/{{site.url}}/public/images/about/{{i}}.jpg">
         <img src="https://ce8be7dec.cloudimg.io/bound/100x100/q20/{{site.url}}/public/images/about/{{i}}.jpg" class="placeholder-img-small">
         <noscript><img src="{{site.url}}/public/images/about/{{i}}.jpg"/></noscript>
         <div class="placeholder-ratio"></div>
       </div>
-    {% endfor %} -->
+    {% endfor %}
   </div>
   <div class="column img-column" style="padding: 0.4rem;">
-    <img alt="my photo" class="image" src="{{site.url}}/public/images/about/6.jpg">
+    <!-- <img alt="my photo" class="image" src="{{site.url}}/public/images/about/6.jpg">
     <img alt="my photo" class="image" src="{{site.url}}/public/images/about/7.jpg">
     <img alt="my photo" class="image" src="{{site.url}}/public/images/about/8.jpg">
     <img alt="my photo" class="image" src="{{site.url}}/public/images/about/9.jpg">
-    <img alt="my photo" class="image" src="{{site.url}}/public/images/about/10.jpg">
-  <!--  {% for i in (6..10) %}
-      <div class="image placeholder" data-large="{{site.url}}/public/images/about/{{i}}.jpg">
+    <img alt="my photo" class="image" src="{{site.url}}/public/images/about/10.jpg"> -->
+   {% for i in (6..10) %}
+      <div class="image placeholder" data-large="https://ce8be7dec.cloudimg.io/cdno/n/q90/{{site.url}}/public/images/about/{{i}}.jpg">
         <img src="https://ce8be7dec.cloudimg.io/bound/100x100/q20/{{site.url}}/public/images/about/{{i}}.jpg" class="placeholder-img-small">
         <noscript><img src="{{site.url}}/public/images/about/{{i}}.jpg"/></noscript>
         <div class="placeholder-ratio"></div>
       </div>
-    {% endfor %} -->
+    {% endfor %}
   </div>
 </div>
 
