fix index style

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@ title: Home
 // </pre>
 </script>
 
-<div class="page-section-header">I'm lecturer</div>
+<div class="page-section-header" style="margin-top:0;">I'm lecturer</div>
 
 <div class="columns">
     <div class="column is-narrow ">
